change pics and add contend

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 					<li class="navigation__item">
 						<a class="navigation__link" href="/about.html">O nas</a>
 					</li>
-
+	<li class="navigation__item">
+						<a class="navigation__link" href="/offer.html">Oferta</a>
+					</li>
 			
 					<li class="navigation__item">
 						<a class="navigation__link" href="/kontakt.html">Kontakt</a>
@@ -61,7 +63,7 @@
 		<main class="main-container">
 						<!-- KIM JESTESMY ------------------------------------------------------------------ -->
 		<section class="section-about u-center-text">
-				<h2 class="heading-secondary u-center-text u-margin-bottom-medium u-margin-top-big flex100"> Bielawski Klub Żeglarski "Wielka Sowa"
+				<h2 class="heading-secondary u-center-text u-margin-bottom-medium u-margin-top-big flex100"> GK-SOLUTIONS Toczenie i Frezowanie CNC
 					</h2>
 			<div class="flex about">
 				<div class="about__col">
