--- a/kontakt.html
+++ b/kontakt.html
@@ -44,7 +44,9 @@
 					<li class="navigation__item">
 						<a class="navigation__link" href="/about.html">O nas</a>
 					</li>
-
+	<li class="navigation__item">
+						<a class="navigation__link" href="/offer.html">Oferta</a>
+					</li>
 				
 					<li class="navigation__item">
 						<a class="navigation__link" href="#">Kontakt</a>
@@ -58,19 +60,18 @@
 			<section class="section-adress flex">
 				<h2 class="heading-secondary adress__heading u-margin-bottom-medium flex100 u-center-text">Bielawski Klub Żeglarski "Wielka Sowa"</h2>
 				<div class="adress__left_column flex-col-1-of-2">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2528.2354740079895!2d16.590342817443837!3d50.678453999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e481bd59d4a65%3A0x3d9998885eaa7ef0!2sBielawski%20Klub%20%C5%BBeglarski%20%22Wielka%20SOWA%22!5e0!3m2!1spl!2spl!4v1652175624081!5m2!1spl!2spl" width="90%" height="300px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="contact__map"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2528.4835916758907!2d16.605944!3d50.673848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e37e2fe02ccd1%3A0xc0b7bba18a2b550f!2sOstroszowicka%205%2C%2058-260%20Bielawa!5e0!3m2!1spl!2spl!4v1674804577004!5m2!1spl!2spl" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 				<div class="adress__right-column flex-col-1-of-2">
 					<ul class="adress__list">
-						<li class="adress__item"><strong>E-mail:</strong> <a href="mailto:bkz.wielkasowa@gmail" class="adress__link" > bkz.wielkasowa@gmail.com</a> </li>
-						<li class="adress__item"><strong>NIP: </strong><a href="tel:bkz.wielkasowa@gmail" class="adress__link"> 8822009623</a></li>
-                      	<li class="adress__item"><strong>REGON: </strong><a href="tel:bkz.wielkasowa@gmail" class="adress__link"> 020246719</a></li>
-                      	<li class="adress__item"><strong>Telefon 1: </strong><a href="tel:+48746461336" class="adress__link"> +48 74 646 13 36</a></li>
-                      <li class="adress__item"><strong>Telefon 2: </strong><a href="tel:+48602508158" class="adress__link"> +48 602 508 158</a></li>
-						<li class="adress__item"><strong>Adres WWW: </strong> <a href="http://www.bkzwielkasowa.pl" target="_blank" class="adress__link"> www.bkzwielkasowa.pl</a></li>
-						<li class="adress__item"><strong>Adres organizacji:</strong><span class="adress__item-text"> ul. Wolności 57, 58-260 Bielawa</span> </li>
-                      <li class="adress__item"><strong>Adres przystani:</strong><span class="adress__item-text"> ul. Wysoka, 58-260 Bielawa</span> </li>
-						<li class="adress__item"><strong>GPS: </strong><span class="adress__item-text"> 0.67842141016392, 16.592510297495522</span></li>
+						<li class="adress__item"><strong>E-mail:</strong> <a href="mailto:" class="adress__link" > Email</a> </li>
+						<li class="adress__item"><strong>NIP: </strong><a href="#" class="adress__link"> </a></li>
+                      	<li class="adress__item"><strong>REGON: </strong><a href="#" class="adress__link"> </a></li>
+                      	<li class="adress__item"><strong>Telefon 1: </strong><a href="tel:+48535518553" class="adress__link"> +48535518553</a></li>
+                      <li class="adress__item"><strong>Telefon 2: </strong><a href="tel:+48530026907" class="adress__link"> +48530026907</a></li>
+						<li class="adress__item"><strong>Adres WWW: </strong> <a href="http://gk-solutions.eu" target="_blank" class="adress__link"> www.gk-solutions.eu</a></li>
+						<li class="adress__item"><strong>Adres organizacji:</strong><span class="adress__item-text"> ul. Ostroszowicka 5 , 58-260 Bielawa</span> </li>
+						<li class="adress__item"><strong>GPS: </strong><span class="adress__item-text"> 50.67397718515884, 16.605954728835695</span></li>
 					</ul>
 				</div>
 				<div class="photo-caption u-margin-top-small">	
