update content and layout

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 					</p>
 				</div>
 			</div>
-			<!-- CEL --------------------------------------------------------------->
+	<!-- CEL --------------------------------------------------------------->
 			<div class="flex flex-row about">
 				<h2 class="heading-secondary u-margin-bottom-medium flex100"> Nasz cel
 			</h2>
@@ -108,6 +108,14 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 				</div>
 			
 			</div>
+
+		
+
+
+
+
+
+
 			<div class="flex flex-row about">
 				<h2 class="heading-secondary u-margin-bottom-medium flex100">Park maszynowy
 			</h2>
@@ -141,11 +149,11 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 			
 			<div class="about__col">
 					<ul class="about__list">
-						<li class="about__list-item">Frezarka ( nazwa i parametry)</li>
-						<li class="about__list-item">Tokarka ( nazwa i parametry)</li>
-						<li class="about__list-item">Spawarki ( nazwa i parametry )</li>
-						<li class="about__list-item">Drukarka 3D( nazwa i parametry)</li>
-						<li class="about__list-item">Piła do cięcia materiału ( nazwa i parametry)</li>
+						<li class="about__list-item">Frezarka ( nazwa i parametry),</li>
+						<li class="about__list-item">Tokarka ( nazwa i parametry),</li>
+						<li class="about__list-item">Spawarki ( nazwa i parametry),</li>
+						<li class="about__list-item">Drukarka 3D( nazwa i parametry),</li>
+						<li class="about__list-item">Piła do cięcia materiału (nazwa i parametry).</li>
 					</ul>
 			</div>
 		</div>
