--- a/offer.html
+++ b/offer.html
@@ -57,39 +57,106 @@
 		<main class="main-container">
 			<!-- KIM JESTESMY ------------------------------------------------------------------ -->
 		<section class="section-about">
+				<!-- Usługa 1 --------------------------------------------------------------->
 			<div class="flex flex-row about">
-				<h2 class="heading-secondary u-margin-bottom-medium flex100"> Nasza oferta
-					</h2>
-				<div class="about__col">
+				<h2 class="heading-secondary u-margin-bottom-medium flex100"> Oferujemy</h2>
+		
+
+					<div class="about__col">
+					<p class="paragraph ">Obróbka Skrawaniem:
+Oferujemy Państwu procesy frezowania i toczenia realizowane na maszynach CNC. Ponadto oferujemy szlifowanie płaszczyzn</p>
+				</div>
+					<div class="about__col">
 				<picture class="about_img">
-						<source srcset="img/detale2.jpg" media="(max-width:56.75em)">
-						<img class="about__img" srcset="img/detale2.jpg" alt="Kolaż zdjęć">
+						<source srcset="img/offer1.jpg" media="(max-width:56.75em)">
+						<img class="about__img" srcset="img/offer1.jpg" alt="Stare zdjęcie">
 					</picture>
 				</div>
-
-				
-
-				<div class="about__col ">
-					<ul class="about__list">
-							<li class="about__list-item">Obróbka Skrawaniem:
-Oferujemy Państwu procesy frezowania i toczenia realizowane na maszynach CNC. Ponadto oferujemy szlifowanie płaszczyzn.
-</li>
-							<li class="about__list-item">Spawanie konstrukcji:
-Wykorzystujemy nasze doświadczenie oraz dobrej jakości sprzęt aby jak najlepiej wykonać spawy.</li>
-							<li class="about__list-item">Usługi druku 3D:
-Wykonujemy detale w technologii FDM (nakładanie warstw) co pomaga obniżyć koszty w prototypowaniu detali.</li>
-							<li class="about__list-item">Projektowanie:
-Pracujemy na oprogramowaniu CAD umożliwiający opracowanie dokumentacji 3D oraz 2D. Potrafimy odtworzyć element na
-podstawie istniejącego wzoru.</li>
-							<li class="about__list-item">Usługi Ślusarskie:
-obróbka wykończeniowa detali, gratowanie, gwintowanie oraz polerowanie.</li>
-							<li class="about__list-item">Doradztwo pod względem technicznym a także pomoc w usprawnieniu procesów produkcyjnych,</li>
-						</ul>
 			
-
-					
-				</div>
 			</div>
+
+			<!-- Usługa 2 --------------------------------------------------------------->
+			<div class="flex flex-row about">
+			
+					<div class="about__col">
+					<p class="paragraph ">Spawanie konstrukcji:
+Wykorzystujemy nasze doświadczenie oraz dobrej jakości sprzęt aby jak najlepiej wykonać spawy.</p>
+				</div>
+
+					<div class="about__col">
+				<picture class="about_img">
+						<source srcset="img/offer2.jpg" media="(max-width:56.75em)">
+						<img class="about__img" srcset="img/offer2.jpg" alt="Stare zdjęcie">
+					</picture>
+				</div>
+			
+			</div>
+			<!-- Usługa 3 --------------------------------------------------------------->
+			<div class="flex flex-row about">
+			
+				<div class="about__col">
+					<p class="paragraph ">Usługi druku 3D:
+Wykonujemy detale w technologii FDM (nakładanie warstw) co pomaga obniżyć koszty w prototypowaniu detali.</p>
+				</div>
+
+					<div class="about__col">
+				<picture class="about_img">
+						<source srcset="img/offer3.jpg" media="(max-width:56.75em)">
+						<img class="about__img" srcset="img/offer3.jpg" alt="Stare zdjęcie">
+					</picture>
+				</div>
+			
+			</div>
+			<!-- Usługa 4 --------------------------------------------------------------->
+			<div class="flex flex-row about">
+			
+				<div class="about__col">
+					<p class="paragraph ">Projektowanie:
+Pracujemy na oprogramowaniu CAD umożliwiający opracowanie dokumentacji 3D oraz 2D. Potrafimy odtworzyć element na
+podstawie istniejącego wzoru.</p>
+				</div>
+
+					<div class="about__col">
+				<picture class="about_img">
+						<source srcset="img/offer4.jpg" media="(max-width:56.75em)">
+						<img class="about__img" srcset="img/offer4.jpg" alt="Stare zdjęcie">
+					</picture>
+				</div>
+			
+			</div>
+
+			
+			<!-- Usługa  5--------------------------------------------------------------->
+			<div class="flex flex-row about">
+				<div class="about__col">
+					<p class="paragraph ">Usługi Ślusarskie:
+obróbka wykończeniowa detali, gratowanie, gwintowanie oraz polerowanie.</p>
+				</div>
+
+					<div class="about__col">
+				<picture class="about_img">
+						<source srcset="img/detale1.jpg" media="(max-width:56.75em)">
+						<img class="about__img" srcset="img/detale1.jpg" alt="Stare zdjęcie">
+					</picture>
+				</div>
+			
+			</div>
+			<!-- Usługa  6--------------------------------------------------------------->
+			<div class="flex flex-row about">
+				<div class="about__col">
+					<p class="paragraph ">Doradztwo pod względem technicznym a także pomoc w usprawnieniu procesów produkcyjnych.</p>
+				</div>
+
+					<div class="about__col">
+				<picture class="about_img">
+						<source srcset="img/offer6.jpg" media="(max-width:56.75em)">
+						<img class="about__img" srcset="img/offer6.jpg" alt="Stare zdjęcie">
+					</picture>
+				</div>
+			
+			</div>
+
+		
 			<!-- CEL --------------------------------------------------------------->
 			<div class="flex flex-row about">
 				<h2 class="heading-secondary u-margin-bottom-medium flex100"> Nasz cel
@@ -109,7 +176,7 @@ obróbka wykończeniowa detali, gratowanie, gwintowanie oraz polerowanie.</li>
 					<div class="about__col">
 				<picture class="about_img">
 						<source srcset="img/detale1.jpg" media="(max-width:56.75em)">
-						<img class="about__img" srcset="img/detale1.jpg" alt="Stare zdjęcie">
+						<img class="about__img" style="border-radius: 100%;" srcset="img/target.jpg" alt="Stare zdjęcie">
 					</picture>
 				</div>
 			
