update layout,  and bugs

--- a/offer.html
+++ b/offer.html
@@ -63,8 +63,8 @@
 		
 
 					<div class="about__col">
-					<p class="paragraph ">Obróbka Skrawaniem:
-Oferujemy Państwu procesy frezowania i toczenia realizowane na maszynach CNC. Ponadto oferujemy szlifowanie płaszczyzn</p>
+					<p class="paragraph ">Obróbka Skrawaniem:</p>
+<p class="paragraph ">Oferujemy Państwu procesy frezowania i toczenia realizowane na maszynach CNC. Ponadto oferujemy szlifowanie płaszczyzn</p>
 				</div>
 					<div class="about__col">
 				<picture class="about_img">
@@ -77,26 +77,26 @@ Oferujemy Państwu procesy frezowania i toczenia realizowane na maszynach CNC. P
 
 			<!-- Usługa 2 --------------------------------------------------------------->
 			<div class="flex flex-row about">
-			
-					<div class="about__col">
-					<p class="paragraph ">Spawanie konstrukcji:
-Wykorzystujemy nasze doświadczenie oraz dobrej jakości sprzęt aby jak najlepiej wykonać spawy.</p>
-				</div>
-
-					<div class="about__col">
+				<div class="about__col">
 				<picture class="about_img">
 						<source srcset="img/offer2.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/offer2.jpg" alt="Stare zdjęcie">
 					</picture>
 				</div>
+					<div class="about__col">
+					<p class="paragraph ">Spawanie konstrukcji:</p>
+<p class="paragraph ">Wykorzystujemy nasze doświadczenie oraz dobrej jakości sprzęt aby jak najlepiej wykonać spawy.</p>
+				</div>
+
+				
 			
 			</div>
 			<!-- Usługa 3 --------------------------------------------------------------->
 			<div class="flex flex-row about">
 			
 				<div class="about__col">
-					<p class="paragraph ">Usługi druku 3D:
-Wykonujemy detale w technologii FDM (nakładanie warstw) co pomaga obniżyć koszty w prototypowaniu detali.</p>
+					<p class="paragraph ">Usługi druku 3D:</p>
+	<p class="paragraph ">Wykonujemy detale w technologii FDM (nakładanie warstw) co pomaga obniżyć koszty w prototypowaniu detali.</p>
 				</div>
 
 					<div class="about__col">
@@ -109,32 +109,32 @@ Wykonujemy detale w technologii FDM (nakładanie warstw) co pomaga obniżyć kos
 			</div>
 			<!-- Usługa 4 --------------------------------------------------------------->
 			<div class="flex flex-row about">
-			
 				<div class="about__col">
-					<p class="paragraph ">Projektowanie:
-Pracujemy na oprogramowaniu CAD umożliwiający opracowanie dokumentacji 3D oraz 2D. Potrafimy odtworzyć element na
-podstawie istniejącego wzoru.</p>
-				</div>
-
-					<div class="about__col">
 				<picture class="about_img">
 						<source srcset="img/offer4.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/offer4.jpg" alt="Stare zdjęcie">
 					</picture>
 				</div>
+				<div class="about__col">
+					<p class="paragraph ">Projektowanie:</p>
+	<p class="paragraph ">Pracujemy na oprogramowaniu CAD umożliwiający opracowanie dokumentacji 3D oraz 2D. Potrafimy odtworzyć element na
+podstawie istniejącego wzoru.</p>
+				</div>
+
+				
 			
 			</div>
 
 			
 			<!-- Usługa  5--------------------------------------------------------------->
 			<div class="flex flex-row about">
+			
 				<div class="about__col">
-					<p class="paragraph ">Usługi Ślusarskie:
-obróbka wykończeniowa detali, gratowanie, gwintowanie oraz polerowanie.</p>
+					<p class="paragraph ">Usługi Ślusarskie:</p>
+	<p class="paragraph ">obróbka wykończeniowa detali, gratowanie, gwintowanie oraz polerowanie.</p>
 				</div>
-
-					<div class="about__col">
-				<picture class="about_img">
+		<div class="about__col">
+					<picture class="about_img">
 						<source srcset="img/detale1.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/detale1.jpg" alt="Stare zdjęcie">
 					</picture>
@@ -144,16 +144,14 @@ obróbka wykończeniowa detali, gratowanie, gwintowanie oraz polerowanie.</p>
 			<!-- Usługa  6--------------------------------------------------------------->
 			<div class="flex flex-row about">
 				<div class="about__col">
-					<p class="paragraph ">Doradztwo pod względem technicznym a także pomoc w usprawnieniu procesów produkcyjnych.</p>
-				</div>
-
-					<div class="about__col">
-				<picture class="about_img">
+					<picture class="about_img">
 						<source srcset="img/offer6.jpg" media="(max-width:56.75em)">
 						<img class="about__img" srcset="img/offer6.jpg" alt="Stare zdjęcie">
 					</picture>
 				</div>
-			
+					<div class="about__col">
+					<p class="paragraph ">Doradztwo pod względem technicznym a także pomoc w usprawnieniu procesów produkcyjnych.</p>
+				</div>
 			</div>
 
 		
@@ -164,11 +162,11 @@ obróbka wykończeniowa detali, gratowanie, gwintowanie oraz polerowanie.</p>
 				<div class="about__col">
 					<p class="paragraph ">Za podstawowy cel naszej działalności stawiamy:
 						<ul class="about__list">
-							<li class="about__list-item">wysoką jakość usług</li>
-							<li class="about__list-item">profesjonalne podejście</li>
-							<li class="about__list-item">wterminowe wykonawstwo</li>
-							<li class="about__list-item">konkurencyjne ceny</li>
-							<li class="about__list-item">najwyższy poziom zadowolenia odbiorców</li>
+							<li class="about__list-item">Wysoką jakość usług,</li>
+							<li class="about__list-item">profesjonalne podejście,</li>
+							<li class="about__list-item">terminowe wykonawstwo,</li>
+							<li class="about__list-item">konkurencyjne ceny,</li>
+							<li class="about__list-item">najwyższy poziom zadowolenia odbiorców.</li>
 						</ul>
 </p>
 				</div>
