--- a/kontakt.html
+++ b/kontakt.html
@@ -58,7 +58,7 @@
 		<main class="main-container contact-page">
 
 			<section class="section-adress flex">
-				<h2 class="heading-secondary adress__heading u-margin-bottom-medium flex100 u-center-text">Bielawski Klub Żeglarski "Wielka Sowa"</h2>
+				<h2 class="heading-secondary adress__heading u-margin-bottom-medium flex100 u-center-text">Dane kontaktowe</h2>
 				<div class="adress__left_column flex-col-1-of-2">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2528.4835916758907!2d16.605944!3d50.673848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e37e2fe02ccd1%3A0xc0b7bba18a2b550f!2sOstroszowicka%205%2C%2058-260%20Bielawa!5e0!3m2!1spl!2spl!4v1674804577004!5m2!1spl!2spl" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
@@ -74,15 +74,7 @@
 						<li class="adress__item"><strong>GPS: </strong><span class="adress__item-text"> 50.67397718515884, 16.605954728835695</span></li>
 					</ul>
 				</div>
-				<div class="photo-caption u-margin-top-small">	
-  					<figure class="photo-caption__photo-box">
-          		
-            			<img class="photo-caption__photo" srcset="img/contact_photo-2x.jpg"  alt="Miniaturka artykułu" >
-							<figcaption class="photo-caption__photo-caption">
-								<span class="photo-caption__photo-text">Witaj w klubie!</span>
-							</figcaption>
-					</figure>	
-				</div>		
+					
 			</section>
 
 <a href="#top" class=" btn-up btn-up__link"><i class="fa-solid fa-angle-up"></i></a>
