navbar upgrade, logochange etc

--- a/offer.html
+++ b/offer.html
@@ -63,7 +63,7 @@
 		
 
 					<div class="about__col">
-					<p class="paragraph ">Obróbka Skrawaniem:</p>
+					<p class="paragraph "><strong> Obróbka Skrawaniem:</strong> </p>
 <p class="paragraph ">Oferujemy Państwu procesy frezowania i toczenia realizowane na maszynach CNC. Ponadto oferujemy szlifowanie płaszczyzn</p>
 				</div>
 					<div class="about__col">
@@ -84,7 +84,7 @@
 					</picture>
 				</div>
 					<div class="about__col">
-					<p class="paragraph ">Spawanie konstrukcji:</p>
+					<p class="paragraph "><strong> Spawanie konstrukcji:</strong></p>
 <p class="paragraph ">Wykorzystujemy nasze doświadczenie oraz dobrej jakości sprzęt aby jak najlepiej wykonać spawy.</p>
 				</div>
 
@@ -95,7 +95,7 @@
 			<div class="flex flex-row about">
 			
 				<div class="about__col">
-					<p class="paragraph ">Usługi druku 3D:</p>
+					<p class="paragraph "><strong> Usługi druku 3D:</strong></p>
 	<p class="paragraph ">Wykonujemy detale w technologii FDM (nakładanie warstw) co pomaga obniżyć koszty w prototypowaniu detali.</p>
 				</div>
 
@@ -116,7 +116,7 @@
 					</picture>
 				</div>
 				<div class="about__col">
-					<p class="paragraph ">Projektowanie:</p>
+					<p class="paragraph "><strong> Projektowanie:</strong></p>
 	<p class="paragraph ">Pracujemy na oprogramowaniu CAD umożliwiający opracowanie dokumentacji 3D oraz 2D. Potrafimy odtworzyć element na
 podstawie istniejącego wzoru.</p>
 				</div>
@@ -130,7 +130,7 @@ podstawie istniejącego wzoru.</p>
 			<div class="flex flex-row about">
 			
 				<div class="about__col">
-					<p class="paragraph ">Usługi Ślusarskie:</p>
+					<p class="paragraph ">Usługi Ślusarskie:</strong></p>
 	<p class="paragraph ">obróbka wykończeniowa detali, gratowanie, gwintowanie oraz polerowanie.</p>
 				</div>
 		<div class="about__col">
