add icon and  layou fixes.

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="css/icon-font.css" />
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/icon-font.css" />
-		<!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png" />  TUTAJ WKLEIĆ PLIK Z LOGIEM W KARTE-->
+		<link rel="shortcut icon" type="image/png" href="img/logo_small.png" />  
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -91,11 +91,11 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 				<div class="about__col">
 					<p class="paragraph ">Za podstawowy cel naszej działalności stawiamy:
 						<ul class="about__list">
-							<li class="about__list-item">wysoką jakość usług</li>
-							<li class="about__list-item">profesjonalne podejście</li>
-							<li class="about__list-item">wterminowe wykonawstwo</li>
-							<li class="about__list-item">konkurencyjne ceny</li>
-							<li class="about__list-item">najwyższy poziom zadowolenia odbiorców</li>
+							<li class="about__list-item">wysoką jakość usług,</li>
+							<li class="about__list-item">profesjonalne podejście,</li>
+							<li class="about__list-item">wterminowe wykonawstwo,</li>
+							<li class="about__list-item">konkurencyjne ceny,</li>
+							<li class="about__list-item">najwyższy poziom zadowolenia odbiorców.</li>
 						</ul>
 </p>
 				</div>
@@ -149,11 +149,11 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 			
 			<div class="about__col">
 					<ul class="about__list">
-						<li class="about__list-item">Frezarka ( nazwa i parametry),</li>
-						<li class="about__list-item">Tokarka ( nazwa i parametry),</li>
-						<li class="about__list-item">Spawarki ( nazwa i parametry),</li>
-						<li class="about__list-item">Drukarka 3D( nazwa i parametry),</li>
-						<li class="about__list-item">Piła do cięcia materiału (nazwa i parametry).</li>
+						<li class="about__list-item">Frezarka,</li>
+						<li class="about__list-item">Tokarka ,</li>
+						<li class="about__list-item">Spawarki,</li>
+						<li class="about__list-item">Drukarka 3D,</li>
+						<li class="about__list-item">Piła do cięcia materiału.</li>
 					</ul>
 			</div>
 		</div>
@@ -203,7 +203,7 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 <!--  -->
 
 <a href="#top" class=" btn-up btn-up__link"><i class="fa-solid fa-angle-up"></i></a>
-<a href="https://www.facebook.com/Bielawski-Klub-%C5%BBeglarski-Wielka-Sowa-101314293280250/" target="_blank" class="btn-side btn-side__link"><i class="fa-brands fa-facebook-square "></a>
+<a href="#" target="_blank" class="btn-side btn-side__link"><i class="fa-brands fa-facebook-square "></a>
 		<footer class="footer" id="footer">
 				<div class="footer__logo-box">
 					<img srcset="./img/logo_small.png" alt="footer logo" class="footer__logo">
