--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/icon-font.css" />
-		<!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png" />  TUTAJ WKLEIĆ PLIK Z LOGIEM W KARTE-->
+		<link rel="shortcut icon" type="image/png" href="img/logo_small.png" />  
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -134,7 +134,7 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal</p>
 					<div class="footer__columns">
 							<div class=" footer__col footer__navigation ">
 								<ul class="footer__list">
-									<li class="footer__item"><a href="https://www.facebook.com/Bielawski-Klub-%C5%BBeglarski-Wielka-Sowa-101314293280250/" target="_blank"  class="footer__link"><i class="fa-brands fa-facebook-square "> </i>
+									<li class="footer__item"><a href="#" target="_blank"  class="footer__link"><i class="fa-brands fa-facebook-square "> </i>
 
 </a></li>
 									<li class="footer__item"><a href="#" class="footer__link"> <i class="fa-brands fa-instagram"> </i>
@@ -158,7 +158,7 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal</p>
 			</footer>
 		</main>		
 		<a href="#" class=" btn-up btn-up__link"><i class="fa-solid fa-angle-up"></i></a>
-		<a href="https://www.facebook.com/Bielawski-Klub-%C5%BBeglarski-Wielka-Sowa-101314293280250/" target="_blank" class="btn-side btn-side__link"><i class="fa-brands fa-facebook-square "></a>
+		<a href="#" target="_blank" class="btn-side btn-side__link"><i class="fa-brands fa-facebook-square "></a>
 <div id="fb-root"></div>
 		<script src="./script.js"></script>
 		
