--- a/offer.html
+++ b/offer.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="css/icon-font.css" />
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/icon-font.css" />
-		<!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png" />  TUTAJ WKLEIĆ PLIK Z LOGIEM W KARTE-->
+		<link rel="shortcut icon" type="image/png" href="img/logo_small.png" />  
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
@@ -249,7 +249,7 @@ podstawie istniejącego wzoru.</p>
 <!--  -->
 
 <a href="#top" class=" btn-up btn-up__link"><i class="fa-solid fa-angle-up"></i></a>
-<a href="https://www.facebook.com/Bielawski-Klub-%C5%BBeglarski-Wielka-Sowa-101314293280250/" target="_blank" class="btn-side btn-side__link"><i class="fa-brands fa-facebook-square "></a>
+<a href="#" class="btn-side btn-side__link"><i class="fa-brands fa-facebook-square "></a>
 		<footer class="footer" id="footer">
 				<div class="footer__logo-box">
 					<img srcset="./img/logo_small.png" alt="footer logo" class="footer__logo">
