dropmenu nav function

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 						<ul class="about__list">
 							<li class="about__list-item">wysoką jakość usług,</li>
 							<li class="about__list-item">profesjonalne podejście,</li>
-							<li class="about__list-item">wterminowe wykonawstwo,</li>
+							<li class="about__list-item">terminowe wykonawstwo,</li>
 							<li class="about__list-item">konkurencyjne ceny,</li>
 							<li class="about__list-item">najwyższy poziom zadowolenia odbiorców.</li>
 						</ul>
