logo change, style.css change

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<body>
 		<header class="header" id="top">
 			<div class="header__logo-box">
-				<img class="header__logo" src="img/logo_medium.png" alt="Logo" />
+				<img class="header__logo" src="img/GK-solutions_1.png" alt="Logo" />
 			</div>
 			<a href="#" class="btn-menu"><i class="fa-solid fa-bars"></i></a>
 			<nav class="navigation ">
