a-lot of changes

--- a/index.html
+++ b/index.html
@@ -36,9 +36,15 @@
 		<title>MET-PLAST</title>
 	</head>
 	<body>
+		<div class="header__contactbar">
+			<ul class="header__contact-list">
+				<li class="contact-list__item"><a href="tel:+48535518553" class="contact-list__link"> &#128222; Zadzwoń: +48 535 518 553</a></li>
+				<li class="contact-list__item"><a href="tel:+48535518553" class="contact-list__link"> &#128231; Napisz do nas: +48 535 518 553</a></li>
+			</ul>
+		</div>
 		<header class="header" id="top">
 			<div class="header__logo-box">
-				<img class="header__logo" src="img/GK-solutions_1.png" alt="Logo" />
+				<img class="header__logo" src="img/logo_medium.png" alt="Logo" />
 			</div>
 			<a href="#" class="btn-menu"><i class="fa-solid fa-bars"></i></a>
 			<nav class="navigation ">
@@ -65,11 +71,8 @@
 		<section class="section-about u-center-text">
 				<h2 class="heading-secondary u-center-text u-margin-bottom-medium u-margin-top-big flex100"> 		
 								
-					<picture class="about_img">
-						<source srcset="img/logo_medium.png" media="(max-width:56.75em)">
-						<img class="about__img" srcset="img/logo_medium.png" alt="Stare zdjęcie">
-					</picture>
-					<br> Toczenie i Frezowanie CNC
+					<p>GK-soultions</p>
+					<p> Toczenie i Frezowanie CNC</p>
 				</h2>
 		<div class="flex flex-row about">
 <div class="about__col">
@@ -149,7 +152,7 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal</p>
 							<div class="footer__col">
 								
 								<p class="footer__copyright-text">
-									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="http://www.freeupages.com" class="footer__link">Patryk Frejek</a> .
+									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="http://www.fre-web.pl" class="footer__link">Patryk Frejek</a> .
 								</p>
 							</div>
 						</div>
