--- a/kontakt.html
+++ b/kontakt.html
@@ -30,6 +30,12 @@
 		<title>MET-PLAST - kontakt</title>
 	</head>
 	<body>
+			<div class="header__contactbar">
+			<ul class="header__contact-list">
+				<li class="contact-list__item"><a href="tel:+48535518553" class="contact-list__link"> &#128222; Zadzwoń: +48 535 518 553</a></li>
+				<li class="contact-list__item"><a href="tel:+48535518553" class="contact-list__link"> &#128231; Napisz do nas: +48 535 518 553</a></li>
+			</ul>
+		</div>
 		<header class="header" id="top">
 			<div class="header__logo-box">
 				<img class="header__logo" src="img/logo_medium.png" alt="Logo" />
@@ -102,7 +108,7 @@
 							<div class="footer__col">
 								
 								<p class="footer__copyright-text">
-									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="http://www.freeupages.com" class="footer__link">Patryk Frejek</a> .
+									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="http://www.fre-web.com" class="footer__link">Patryk Frejek</a> .
 								</p>
 							</div>
 						</div>
