change link to my page fre-web.pl

--- a/kontakt.html
+++ b/kontakt.html
@@ -108,7 +108,7 @@
 							<div class="footer__col">
 								
 								<p class="footer__copyright-text">
-									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="http://www.fre-web.com" class="footer__link">Patryk Frejek</a> .
+									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="http://www.fre-web.pl" class="footer__link">Patryk Frejek</a> .
 								</p>
 							</div>
 						</div>
