--- a/kontakt.html
+++ b/kontakt.html
@@ -69,7 +69,7 @@
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2527.4161225695775!2d16.634542!3d50.6936621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e37ce98c34b0b%3A0x5268b706c5a8a2fc!2sBrze%C5%BCna%2037%2C%2058-260%20Bielawa!5e0!3m2!1spl!2spl!4v1677012615130!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>				</div>
 				<div class="adress__right-column flex-col-1-of-2">
 					<ul class="adress__list">
-						<li class="adress__item"><strong>E-mail:</strong> <a href="mailto:gksolutions.cnc@gmail.com" class="adress__link" > Email : gksolutions.cnc@gmail.com</a> </li>
+						<li class="adress__item"><strong>E-mail:</strong> <a href="mailto:gksolutions.cnc@gmail.com" class="adress__link" >gksolutions.cnc@gmail.com</a> </li>
 						<li class="adress__item"><strong>NIP: </strong><a href="#" class="adress__link"> </a></li>
                       	<li class="adress__item"><strong>REGON: </strong><a href="#" class="adress__link"> </a></li>
                       	<li class="adress__item"><strong>Telefon 1: </strong><a href="tel:+48535518553" class="adress__link"> +48535518553</a></li>
