--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 			rel="stylesheet"
 		/>
 
-		<title>MET-PLAST - O nas</title>
+		<title>GK-Soutions - O nas</title>
 	</head>
 	<body>
 			<div class="header__contactbar">
