--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				width:50rem;
 			}
 			</style>
-		<title>MET-PLAST</title>
+		<title>GK-Soutions</title>
 	</head>
 	<body>
 		<div class="header__contactbar">
