--- a/kontakt.html
+++ b/kontakt.html
@@ -27,7 +27,7 @@
 			rel="stylesheet"
 		/>
 
-		<title>MET-PLAST - kontakt</title>
+		<title>GK-Soutions - kontakt</title>
 	</head>
 	<body>
 			<div class="header__contactbar">
