--- a/offer.html
+++ b/offer.html
@@ -27,7 +27,7 @@
 			rel="stylesheet"
 		/>
 
-		<title>MET-PLAST - Oferta</title>
+		<title>GK-Soutions - Oferta</title>
 	</head>
 	<body>
 			<div class="header__contactbar">
