add contacts, content updates

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 				<div class="about__col ">
 					
 					<p class="paragraph ">Jesteśmy firma złożona z przyjaciół. Połączyła nas wspólna pasja do tworzenia i konstruowania. Razem chcieliśmy stworzyć coś
-wyjątkowego. Postanowiliśmy zrealizować nasze marzenia dlatego przedstawiamy Państwu (nazwa Firmy). Każdy z członków firmy
+wyjątkowego. Postanowiliśmy zrealizować nasze marzenia dlatego przedstawiamy Państwu GK-SOLUTIONS. Każdy z członków firmy
 chce żeby klient był zadowolony dlatego dokładamy wszelkich starań by jak najlepiej wywiązywać się z powierzonych zadań.
 Produkujemy wyroby z metali i tworzyw sztucznych
 Świadczymy usługi z zakresu szeroko rozumianej obróbki na obrabiarkach CNC
