--- a/kontakt.html
+++ b/kontakt.html
@@ -66,20 +66,32 @@
 			<section class="section-adress flex">
 				<h2 class="heading-secondary adress__heading u-margin-bottom-medium flex100 u-center-text">Dane kontaktowe</h2>
 				<div class="adress__left_column flex-col-1-of-2">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2527.4161225695775!2d16.634542!3d50.6936621!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470e37ce98c34b0b%3A0x5268b706c5a8a2fc!2sBrze%C5%BCna%2037%2C%2058-260%20Bielawa!5e0!3m2!1spl!2spl!4v1677012615130!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>				</div>
-				<div class="adress__right-column flex-col-1-of-2">
+</div>
+<div class="adress__right-column flex-col-1-of-2">
 					<ul class="adress__list">
 						<li class="adress__item"><strong>E-mail:</strong> <a href="mailto:gksolutions.cnc@gmail.com" class="adress__link" >gksolutions.cnc@gmail.com</a> </li>
-						<li class="adress__item"><strong>NIP: </strong><a href="#" class="adress__link"> </a></li>
-                      	<li class="adress__item"><strong>REGON: </strong><a href="#" class="adress__link"> </a></li>
-                      	<li class="adress__item"><strong>Telefon 1: </strong><a href="tel:+48535518553" class="adress__link"> +48535518553</a></li>
-                      <li class="adress__item"><strong>Telefon 2: </strong><a href="tel:+48530026907" class="adress__link"> +48530026907</a></li>
+						<li class="adress__item"><strong>NIP: 8822143304 </strong></li>
 						<li class="adress__item"><strong>Adres WWW: </strong> <a href="http://gk-solutions.eu" target="_blank" class="adress__link"> www.gk-solutions.eu</a></li>
 						<li class="adress__item"><strong>Adres organizacji:</strong><span class="adress__item-text"> ul. Brzezna 37 , 58-260 Bielawa</span> </li>
 						<li class="adress__item"><strong>GPS: </strong><span class="adress__item-text">50.693796883537324, 16.634503637560798</span></li>
 					</ul>
 				</div>
-					
+				</section>
+
+				<section class="section-adress flex" >
+				<div class="adress__left-column flex-col-1-of-2">
+					<ul class="adress__list" >
+						<li class="adress__item"><strong>Dział sprzedaży: </strong> </li>
+						<li class="adress__item"> Nr:<a href="tel:+48535518553" class="adress__link">  +48535518553</a></li>
+						<li class="adress__item"> Nr:<a href="tel:+48795793839" class="adress__link"> +48795793839</a></li>
+					</ul>
+				</div>
+				
+				<div class="adress__right-column flex-col-1-of-2">
+					<ul class="adress__list">
+                    	<li class="adress__item"><strong>Dział technologiczno-produkcyjny: </strong> <br><a href="tel:+48530026907" class="adress__link"> +48530026907</a></li>
+					</ul>
+				</div>
 			</section>
 
 <a href="#top" class=" btn-up btn-up__link"><i class="fa-solid fa-angle-up"></i></a>
