--- a/about.html
+++ b/about.html
@@ -232,7 +232,7 @@ Zlecone projekty wykonujemy zawsze z dbałością o każdy detal.
 							<div class="footer__col">
 								
 								<p class="footer__copyright-text">
-									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="http://www.fre-web.pl" class="footer__link">Patryk Frejek</a> .
+									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="https://www.fre-web.pl" class="footer__link">Patryk Frejek</a> .
 								</p>
 							</div>
 						</div>
