--- a/kontakt.html
+++ b/kontakt.html
@@ -78,8 +78,6 @@
 						<li class="adress__item"><strong>Dział sprzedaży: </strong> </li>
 						<li class="adress__item"> Nr:<a href="tel:+48535518553" class="adress__link">  +48535518553</a></li>
 						<li class="adress__item"> Nr:<a href="tel:+48795793839" class="adress__link"> +48795793839</a></li>
-					</ul>
-								<ul class="adress__list">
                     	<li class="adress__item"><strong>Dział technologiczno-produkcyjny: </strong> <br><a href="tel:+48530026907" class="adress__link"> +48530026907</a></li>
 					</ul>
 				</div>
@@ -112,7 +110,7 @@
 							<div class="footer__col">
 								
 								<p class="footer__copyright-text">
-									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="http://www.fre-web.pl" class="footer__link">Patryk Frejek</a> .
+									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="https://www.fre-web.pl" class="footer__link">Patryk Frejek</a> .
 								</p>
 							</div>
 						</div>
