--- a/index.html
+++ b/index.html
@@ -68,14 +68,16 @@
 		</header>
 		<main class="main-container">
 						<!-- KIM JESTESMY ------------------------------------------------------------------ -->
-		<section class="section-about u-center-text">
-				<h2 class="heading-secondary u-center-text u-margin-bottom-medium u-margin-top-big flex100"> 		
-								
-					<p>GK-soultions</p>
-					<p> Obróbka metalu i plastiku</p>
-				</h2>
-		<div class="flex flex-row about">
-			<div>
+						<section class="section-about u-center-text">
+							<div class="flex flex-row about">
+								<div>
+									<div class="header__banner">
+										<div class="banner">	</div>
+										<h2 class=" banner__text u-center-text "> 		
+											<p>GK-solutions</p>
+											<p> Obróbka metalu i plastiku</p>
+										</h2>
+									</div>
 				<p class="paragraph ">
 					Produkujemy wyroby z metali i tworzyw sztucznych,
 					świadczymy usługi z zakresu szeroko rozumianej obróbki na obrabiarkach CNC,
@@ -90,24 +92,7 @@
 		</section>
 		<div class="container">
 			<div class="gallery">
-							<figure class="gallery__item gallery__item--1">
-								<img src="img/detale8.jpg" alt="Gallery image 1" class="gallery__img">
-							</figure>
-							<figure class="gallery__item gallery__item--2">
-								<img src="img/detale5.jpg" alt="Gallery image 2" class="gallery__img">
-							</figure>
-							<figure class="gallery__item gallery__item--3">
-								<img src="img/detale2.jpg" alt="Gallery image 3" class="gallery__img">
-							</figure>
-							<figure class="gallery__item gallery__item--4">
-								<img src="img/detale1.jpg" alt="Gallery image 4" class="gallery__img">
-							</figure>
-							<figure class="gallery__item gallery__item--5">
-								<img src="img/detale6.jpg" alt="Gallery image 5" class="gallery__img">
-							</figure>
-							<figure class="gallery__item gallery__item--6">
-								<img src="img/detale3.jpg" alt="Gallery image 6" class="gallery__img">
-							</figure>
+					<img src="./img/gallery.JPG" alt="gallery"  class="gallery__img">
 						</div>
 				</div>
 
@@ -124,7 +109,7 @@
 							</div>
 							<div class="footer__col">
 								<p class="footer__copyright-text">
-									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="http://www.fre-web.pl" class="footer__link">Patryk Frejek</a> .
+									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="https://www.fre-web.pl" class="footer__link">Patryk Frejek</a> .
 								</p>
 							</div>
 						</div>
