--- a/offer.html
+++ b/offer.html
@@ -278,7 +278,7 @@ podstawie istniejącego wzoru.</p>
 							<div class="footer__col">
 								
 								<p class="footer__copyright-text">
-									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="http://www.fre-web.pl" class="footer__link">Patryk Frejek</a> .
+									Wszelkie prawa zastrzeżone. <br> Copyright &copy;<a href="https://www.fre-web.pl" class="footer__link">Patryk Frejek</a> .
 								</p>
 							</div>
 						</div>
