--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 										<h2 class=" banner__text u-center-text "> 		
 											<p>GK-solutions</p>
 											<p> Obróbka metalu i plastiku</p>
+
 										</h2>
+										<a href="/about.html" class="banner__button">Więcej o nas...</a>
 									</div>
 				<p class="paragraph ">
 					Produkujemy wyroby z metali i tworzyw sztucznych,
