hyphens and paragraph style update

--- a/offer.html
+++ b/offer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -179,7 +179,7 @@ podstawie istniejącego wzoru.</p>
 
 					<div class="about__col">
 				<picture class="about_img">
-						<source srcset="img/detale1.jpg" media="(max-width:56.75em)">
+						<source srcset="img/target.jpg" media="(max-width:56.75em)">
 						<img class="about__img" style="border-radius: 100%;" srcset="img/target.jpg" alt="Stare zdjęcie">
 					</picture>
 				</div>
